--- a/setup.cfg
+++ b/setup.cfg
@@ -27,7 +27,7 @@ project_urls =
 
 [options]
 python_requires = >=3.8
-packages = a3ddddocr-client
+packages = a3ddddocr_client
 include_package_data = true
 zip_safe = false
 install_requires =
